--- a/sin.css
+++ b/sin.css
@@ -652,19 +652,7 @@
             display: flex;  flex-direction: column; display: none;
         }
         .links{
-    position: absolute; padding: 1.3vw 2vw 0vw 5vw; top: 6.1vw; right: 1.5vw; display: flex; list-style: none;   transition: opacity 0.3s ease;  flex-direction: column; gap: 2vw; background-color: #ffff; color: #111; font-size: 4vw; margin-top: 4vw; opacity: 0;
-      
-  /* opacity: 0; */
-  /* position: absolute; */
-  /* top: 14vh; */
-  /* right: 0; */
-  /* width: 60%; */
-  /* background: #fff; */
-  /* list-style: none; */
-  /* text-align: center; */
-  /* padding: 1rem 0; */
-  /* box-shadow: 0 4px 10px rgba(0,0,0,0.2); */
-  /* transition: opacity 0.3s ease; */
+    position: absolute; padding-left: 3vw; top: 5vw; right: 0%; display: flex; list-style: none;  max-height: 0;  transition: max-height 0.3s ease;  flex-direction: column; gap: 2vw; width: 100vw; background-color: #ffff; color: #111; font-size: 5vw; margin-top: 5vw; overflow: hidden;
 }
 #nn{ padding-right: 8vw; position: relative;}
 .links>li>a{
@@ -917,7 +905,7 @@
     display: none;
   }
 .links.active {
-  opacity: 1;
+  max-height: 180px; 
 }
   .lines {
     display: block; 
