--- a/sin.css
+++ b/sin.css
@@ -652,7 +652,7 @@
             display: flex;  flex-direction: column; display: none;
         }
         .links{
-    position: absolute; padding-left: 3vw; top: 5vw; right: 0%; display: flex; list-style: none;  max-height: 0;  transition: max-height 0.3s ease;  flex-direction: column; gap: 2vw; width: 100vw; background-color: #ffff; color: #111; font-size: 5vw; margin-top: 5vw; overflow: hidden;
+    position: absolute;  top: 5vw; right: 0%; display: flex; list-style: none;  max-height: 0;  transition: max-height 0.3s ease;  flex-direction: column; gap: 2vw; width: 100vw; background-color: #ffff; color: #111; font-size: 6vw; margin-top: 8vw; overflow: hidden;
 }
 #nn{ padding-right: 8vw; position: relative;}
 .links>li>a{
@@ -905,7 +905,7 @@
     display: none;
   }
 .links.active {
-  max-height: 180px; 
+  max-height: 450px; padding-left: 3vw; padding-bottom: 2vw;
 }
   .lines {
     display: block; 
